add security bearerAuth
